Change gitignore again

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 archive/images/*
 archive/archive.db*
 archive/archive.ydb*
-*/imobooru.db*
+imobooru.db*
 archive/thumbnails/*
 contribute/fossil/*
 syncStates/*
